--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     margin-top: 12rem;
     margin-bottom: 8rem;
-    padding: 0 6.25rem 0 6.4rem;
+    padding: 0 5.25rem 0 6.4rem;
 }
 
 .cart-container {
@@ -245,7 +245,11 @@
     opacity: 0;
     visibility: hidden;
     transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s;
-    max-width: 300px;
+    max-width: 90vw;
+    min-width: 100px;
+    width: auto;
+    white-space: nowrap;
+    word-break: break-all;
 }
 
 .cart-alert.show {
@@ -264,6 +268,8 @@
 .alert-message {
     font-size: 0.8rem;
     font-weight: 400;
+    white-space: nowrap;
+    word-break: break-all;
 }
 
 .alert-close {
