--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -67,11 +67,11 @@ body {
 
 .checkout-container {
   display: flex;
-  margin: 3rem auto;
+  margin: 6rem auto;
   background: #fff;
   padding: 0 0;
   gap: 1rem;
-  max-width: calc(100% - 120px);
+  max-width: calc(84.65% - 120px);
   padding-right: 20px;
   width: 100%;
 }
@@ -441,6 +441,7 @@ input:focus, select:focus {
 .discount-row button:hover:not(:disabled) {
   background-color: #fff;
   color: #2a2a2a;
+  border: 1px solid #2a2a2a;
 }
 
 .discount-row button:disabled {
@@ -555,7 +556,7 @@ input:focus, select:focus {
   font-weight: 300;
   color: #333;
   background-color: #ffffff;
-  border: 1px solid #2a2a2a;
+  border: 1px solid rgb(42, 42, 42, 0.6);
 
   width: 100%;
   height: 48px;
@@ -597,7 +598,7 @@ input:focus, select:focus {
 .floating-label-group input:focus,
 .floating-label-group select:focus,
 .floating-label-group textarea:focus {
-  border-color: #0070f3;
+  border-color: #2a2a2a;
   outline: none;
 }
 
